crates/introspect/tests/snapshots/sqlite__ordinary_table.snap
---
source: crates/introspect/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
backend: sqlite
tables:
  - namespace: main
    name: users
    comment: ~
    columns:
      - name: id
        data_type: INTEGER
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: email
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: display_name
        data_type: TEXT
        nullable: true
        default: "'anonymous'"
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: ~
        kind: primary_key
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - email
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
    indexes: []
    backend:
      backend: sqlite
      without_rowid: false
      strict: false
      definition: "CREATE TABLE users (\n    id INTEGER PRIMARY KEY NOT NULL,\n    email TEXT NOT NULL,\n    display_name TEXT DEFAULT 'anonymous'\n)"
      kind:
        kind: ordinary
views: []
triggers: []
functions: []
