crates/introspect/tests/snapshots/sqlite__schema_evolution.snap
---
source: crates/introspect/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
backend: sqlite
namespaces:
  - name: main
    comment: ~
enums: []
tables:
  - namespace: main
    name: imported_records
    comment: ~
    columns:
      - name: id
        data_type: ""
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: label
        data_type: ""
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints: []
    indexes: []
    backend:
      backend: sqlite
      without_rowid: false
      strict: false
      definition: "CREATE TABLE imported_records(id,label)"
      kind:
        kind: ordinary
  - namespace: main
    name: records
    comment: ~
    columns:
      - name: id
        data_type: INTEGER
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: name
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: normalized_name
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: virtual_generated
          collation: BINARY
          generated_expression: lower (name)
      - name: optional_note
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: ~
        kind: primary_key
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - name
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
    indexes: []
    backend:
      backend: sqlite
      without_rowid: false
      strict: false
      definition: "CREATE TABLE \"records\" (\n    id INTEGER PRIMARY KEY,\n    name TEXT NOT NULL,\n    normalized_name TEXT GENERATED ALWAYS AS (lower(name)) VIRTUAL, optional_note TEXT)"
      kind:
        kind: ordinary
views: []
triggers: []
functions: []
